# Bbiribarabu

./: .gitignore  Cargo.toml  LICENSE  README.ko.md  README.md
.bbiribarabu/logs/: develop.json  feature__log.json  feature__ui.json  feature__voice.json
.github/workflows/: build.yml
src/: app.rs  cli.rs  main.rs  voice.rs
src/git/: branch.rs  mod.rs  repo.rs
src/log/: model.rs  store.rs
src/ui/: mod.rs  pty_terminal.rs  terminal.rs  tui.rs
src/voice/: model.rs
