[package]
name = "Bbiribarabu"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.26"
crossterm = "0.27"
portable-pty = "0.8"
vt100 = "0.15"
unicode-width = "0.1"
